# SystemIntegration

./: .gitignore
01._misc/: google.html  paymentiframe.html  style.css
02._files/: me.xml  me.yaml
02._files/01a/: js_file_reader.js
03._modules/html_no_modules/: index.html  index.js  myModule.js
06._Servers/python/: main.py  pyproject.toml
08.Server-To-Server/node/: app.js
08.Server-To-Server/python/: main.py  pyproject.toml
09._Enviroment_Variables/node/: .env-dev  index.js  package-lock.json  package.json
09._Enviroment_Variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js  package-lock.json  package.json
12._Long_Polling/node/: app.js
13._Server-sent_Events/node/: app.js
13._Server-sent_Events/python-sse/: main.py  n.pub  pyproject.toml
14._websockets/node-websockets/: package.json
14._websockets/python-plain/: client.py  pyproject.toml
16._CORS/node-CORS/: app.js  (+1 more)
17._Multipart-forms/python-multipart-forms/: main.py  pyproject.toml
22._Database_Documentation/: hiveplanner_mro_docs.html  npx_command.txt
23._Database_Migrations/: dev.sqlite3  knexfile.js
NodeProfile/: app.js  jsdoc.json  package.json  readme.md
auth/: package-lock.json  package.json  readme.md
auth_integration/: readme.md
database_migrations/: migration.js
graphql_book/: database.sqlite  index.js  readme.md
lektier_01/: js_file_reader.js  package-lock.json  package.json  py_file_reader.py
lektier_02/: server.js
node-webhook2/: webhooks.txt
node-websocket1/: txt.txt
(+71 files in other folders)
