[tool.poetry]
name = "python-plain"
version = "0.1.0"
description = ""
authors = ["shortytheman <shor7ty@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "no"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
